--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,20 @@
   "version": 2,
   "builds": [
     {
+      "src": "src/backend/index.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": { "distDir": "build" }
     }
   ],
   "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "src/backend/index.js"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
